--- a/views/results.erb
+++ b/views/results.erb
@@ -1,5 +1,5 @@
 <h1>Your Text Analysis</h1>
-<%  @analyzed_text.params[  %>
+<%  @analyzed_text.params[count_of_words]  %>
 <h2>Number of Words: </h2>
 
 <h2>Vowels: </h2>
