--- a/views/results.erb
+++ b/views/results.erb
@@ -7,4 +7,4 @@
 
 <h2>Consonants: <% @analyzed_text.count_of_consonants %></h2>
 
-<h2>most_Common_letter: <%= @analyzed_text.most_used_letter.keys.first.upcase %>, used <%= @analyzed_text.most_used_letter.values.first %> times</h2>
+<h2>Most_Common_Letter: <%= @analyzed_text.most_used_letter.keys.first.upcase %>, used <%= @analyzed_text.most_used_letter.values.first %> times</h2>
